--- a/admitcard/qrcode/regid/index.html
+++ b/admitcard/qrcode/regid/index.html
@@ -132,8 +132,14 @@
 
     /* Print styles */
     @media print {
-      body {
+
+      /* Remove browser-generated headers and footers */
+      @page {
         margin: 0;
+      }
+
+      body {
+        margin: 1cm;
       }
 
       table {
@@ -469,7 +475,6 @@
   <div id="qrcode-container">
     <div style="text-align: center;">
       <div id="qrcode"></div>
-      <p style="font-size: 10px; margin-top: 5px;">Scan to view online</p>
     </div>
   </div>
 
